--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
+* {
+	padding: 0;
+	margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+body:hover {
+	cursor: url('https://lh3.googleusercontent.com/pw/AM-JKLUlg3LbEWMh7eJFuvxc33EYrECX4GgNg5o0lni660NCObf7nmqDooY632SdByVRLVvKg3AQVUOciyfLGCDVo0FAOOWTsyQHxbOksEYUn9s_kLeC9c9SZ_kUgdyV0p02X2H4fKVIRob78SmHzojVmOP8=s27-no'),
+		auto;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+	height: 100vh;
+	width: 100%;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	overflow: hidden;
 }
