--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,12 @@
+@font-face {
+	font-family: Genshin;
+	src: url('./font/ja-jp.ttf');
+}
+
 * {
 	padding: 0;
 	margin: 0;
+	font-family: Genshin;
 }
 
 body:hover {
@@ -11,4 +17,13 @@ body:hover {
 	width: 100%;
 
 	overflow: hidden;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	cursor: url('https://lh3.googleusercontent.com/pw/AM-JKLUlg3LbEWMh7eJFuvxc33EYrECX4GgNg5o0lni660NCObf7nmqDooY632SdByVRLVvKg3AQVUOciyfLGCDVo0FAOOWTsyQHxbOksEYUn9s_kLeC9c9SZ_kUgdyV0p02X2H4fKVIRob78SmHzojVmOP8=s27-no'),
+		auto;
 }
