--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,14 +9,16 @@
 	font-family: Genshin;
 }
 
-body:hover {
-	cursor: url('https://lh3.googleusercontent.com/pw/AM-JKLUlg3LbEWMh7eJFuvxc33EYrECX4GgNg5o0lni660NCObf7nmqDooY632SdByVRLVvKg3AQVUOciyfLGCDVo0FAOOWTsyQHxbOksEYUn9s_kLeC9c9SZ_kUgdyV0p02X2H4fKVIRob78SmHzojVmOP8=s27-no'),
-		auto;
-
+body {
 	height: 100vh;
 	width: 100%;
 
 	overflow: hidden;
+}
+
+body:hover {
+	cursor: url('https://lh3.googleusercontent.com/pw/AM-JKLUlg3LbEWMh7eJFuvxc33EYrECX4GgNg5o0lni660NCObf7nmqDooY632SdByVRLVvKg3AQVUOciyfLGCDVo0FAOOWTsyQHxbOksEYUn9s_kLeC9c9SZ_kUgdyV0p02X2H4fKVIRob78SmHzojVmOP8=s27-no'),
+		auto;
 }
 
 a {
